--- a/styles/styles.css
+++ b/styles/styles.css
@@ -147,9 +147,19 @@ button {
   -moz-appearance: none;
 }
 
+button[id="temp_up"]:hover {
+  background-color: rgb(255, 60, 0);
+  font-weight: bold;
+}
+
+button[id="temp_down"]:hover {
+  background-color: rgb(0, 89, 255);
+  font-weight: bold;
+}
+
 button:hover,
 button:focus {
-  background: #0053ba;
+  background: #313031;
 }
 
 button:focus {
